[gd_scene load_steps=19 format=2]

[ext_resource path="res://mainMenu.gd" type="Script" id=1]
[ext_resource path="res://Nodes/Lang_Btns.tscn" type="PackedScene" id=2]
[ext_resource path="res://ASSETS/Fonts/PixelifySans-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://ASSETS/Images/7936cbd43f8a0fedf994c50d4216383bdcb751c7_2000x2000.webp" type="Texture" id=4]
[ext_resource path="res://ASSETS/Images/panel-transparent-border-012.png" type="Texture" id=5]
[ext_resource path="res://ASSETS/Images/panel-transparent-border-015.png" type="Texture" id=6]
[ext_resource path="res://ASSETS/Sounds/start bg.mp3" type="AudioStream" id=7]
[ext_resource path="res://ASSETS/Sounds/start buton.wav" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 48, 48 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 48, 48 )
margin_left = 6.0
margin_right = 3.0
margin_top = 8.0
margin_bottom = 8.0

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
size = 71
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 28
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=11]
size = 60
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=12]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=13]
size = 20
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )

[node name="Start" type="Button" parent="."]
margin_left = 387.0
margin_top = 302.0
margin_right = 610.0
margin_bottom = 408.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
text = "START"

[node name="exit" type="Button" parent="."]
margin_left = 409.0
margin_top = 456.0
margin_right = 596.0
margin_bottom = 545.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
text = "EXIT"

[node name="Lang_Btns" parent="." instance=ExtResource( 2 )]
margin_left = 26.0
margin_top = 31.0
margin_right = -878.0
margin_bottom = -549.0

[node name="Label" type="Label" parent="."]
margin_left = 298.0
margin_top = 172.0
margin_right = 690.0
margin_bottom = 258.0
theme = SubResource( 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "ROYAL HAHA"
uppercase = true

[node name="Menu Bg" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 8.0
autoplay = true

[node name="Start Button" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = 8.0

[node name="Connect" type="Label" parent="."]
margin_left = 246.0
margin_top = 103.0
margin_right = 737.0
margin_bottom = 137.0
custom_colors/font_color = Color( 0.686275, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "Connect To Internet before Playing"

[node name="About" type="Button" parent="."]
margin_left = 9.0
margin_top = 123.0
margin_right = 153.0
margin_bottom = 186.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
text = "ABOUT"

[node name="AcceptDialog" type="PopupDialog" parent="."]
visible = true
margin_left = 303.0
margin_top = 154.0
margin_right = 745.0
margin_bottom = 494.0

[node name="CanvasLayer" type="CanvasLayer" parent="AcceptDialog"]

[node name="PIXEL FUN" type="Label" parent="AcceptDialog/CanvasLayer"]
margin_left = 376.0
margin_top = 159.0
margin_right = 657.0
margin_bottom = 232.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
text = "PIXEL FUN"

[node name="ColorRect" type="ColorRect" parent="AcceptDialog/CanvasLayer"]
margin_left = 315.0
margin_top = 253.0
margin_right = 532.0
margin_bottom = 293.0
color = Color( 0.309804, 0.694118, 0.239216, 1 )

[node name="ColorRect2" type="ColorRect" parent="AcceptDialog/CanvasLayer"]
margin_left = 565.0
margin_top = 253.0
margin_right = 719.0
margin_bottom = 293.0
color = Color( 0.309804, 0.694118, 0.239216, 1 )

[node name="ColorRect3" type="ColorRect" parent="AcceptDialog/CanvasLayer"]
margin_left = 438.0
margin_top = 327.0
margin_right = 599.0
margin_bottom = 367.0
color = Color( 0.309804, 0.694118, 0.239216, 1 )

[node name="ColorRect4" type="ColorRect" parent="AcceptDialog/CanvasLayer"]
margin_left = 318.0
margin_top = 398.0
margin_right = 511.0
margin_bottom = 438.0
color = Color( 0.309804, 0.694118, 0.239216, 1 )

[node name="ColorRect5" type="ColorRect" parent="AcceptDialog/CanvasLayer"]
margin_left = 533.0
margin_top = 399.0
margin_right = 714.0
margin_bottom = 440.0
color = Color( 0.309804, 0.694118, 0.239216, 1 )

[node name="Micky" type="Label" parent="AcceptDialog/CanvasLayer"]
margin_left = 589.0
margin_top = 255.0
margin_right = 754.0
margin_bottom = 292.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 12 )
text = "Asni P."

[node name="Micky2" type="Label" parent="AcceptDialog/CanvasLayer"]
margin_left = 323.0
margin_top = 256.0
margin_right = 524.0
margin_bottom = 293.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 12 )
text = "Milkeybear 14"

[node name="Micky3" type="Label" parent="AcceptDialog/CanvasLayer"]
margin_left = 536.0
margin_top = 399.0
margin_right = 707.0
margin_bottom = 436.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 12 )
text = "Rani Melese"

[node name="Micky5" type="Label" parent="AcceptDialog/CanvasLayer"]
margin_left = 444.0
margin_top = 327.0
margin_right = 609.0
margin_bottom = 364.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 12 )
text = "Ato Codes"

[node name="Micky6" type="Label" parent="AcceptDialog/CanvasLayer"]
margin_left = 463.0
margin_top = 215.0
margin_right = 629.0
margin_bottom = 240.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
text = "Gaming Team"

[node name="Micky4" type="Label" parent="AcceptDialog/CanvasLayer"]
margin_left = 323.0
margin_top = 399.0
margin_right = 506.0
margin_bottom = 436.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 12 )
text = "Endemariam"

[connection signal="pressed" from="Start" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="About" to="." method="_on_About_pressed"]
[connection signal="popup_hide" from="AcceptDialog" to="." method="_on_AcceptDialog_popup_hide"]
